-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.1.1
-
Fix Version/s: 5.2.0
-
Component/s: Build System
-
Labels:None
-
Environment:Windows 8 Pro, x64, MS Visual Studio 2012 Desktop compiler, Windows SDK installed, Qt 5.1.1 sources configured with -static -debug-and-release ...
-
Commits:40d4c1b2ed24016d1860e21c7fd9d374c387f82d,08a2d8df4943453a0df8c02a88cfb29f210d0a10
Just tried to compile (-static) and install the latest Qt 5.1.1 patch release from sources on Windows 8 x64 using VS2012 Desktop:
In a Visual Studio 2012 Command Prompt:
C:\qt\qt-...src-5.1.1> set QTDIR=C:\qt\qt-everywhere-enterprise-src-5.1.1 C:\qt\qt-...src-5.1.1> set PATH=%QTDIR%\qtbase\bin;%QTDIR%\gnuwin32\bin;%PATH% C:\qt\qt-...src-5.1.1> set QMAKESPEC=win32-msvc2012 C:\qt\qt-...src-5.1.1> configure \ -platform win32-msvc2012 \ -prefix c:\qt\5.1.1-static \ -static \ -debug-and-release \ -commercial \ -qt-zlib \ -no-incredibuild-xge \ -mp \ -directwrite \ -no-compile-examples \ -nomake examples \ -skip qtwebkit-examples
The build with 'nmake' went smooth (many warnings though...), but the final 'nmake install' seems to be incomplete in several aspects:
- most of the *.prl files in the installation target still have references to the source tree, especially variable QMAKE_PRL_LIBS.
- several referenced/required dependent libraries are not installed. These are qtbase\lib\translator_* and qtbase\lib\preprocessor*
- the debug information files (PDB) for the Qt libraries seem to be missing in the installation target directory (e.g. lib\vc110.pdb). I keep getting tons of errors of this sort when compiling a qmake project configured for debug platform:
(freely translated from German):Library "debug\tappS.lib" and object "debug\tappS.exp" are created. Qt5PrintSupportd.lib(qpaintengine_alpha.obj) : warning LNK4099: PDB "vc110.pdb" was not found with "Qt5PrintSupportd.lib(qpaintengine_alpha.obj)" or at "c:\myproject\debug\vc110.pdb"; linking object as if no debug info.
To reproduce you must remove/rename the source-tree first and compile a Qt project in 'debug' mode with this static Qt installation.
- is required for
-
QTBUG-33880 Error while building/deploying project menus
-
- Closed
-