make sure that installed meta files are always postprocessed

the problem is that there is no sed command on windows ... so build it
into qmake and invoke that from the generated makefiles. cmake does the
same, after all. ^^

Task-number: QTBUG-33794
Change-Id: Ib7077e18acbc5edd79f714c5779a5ed31ea6c093
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>

cregit: 40d4c1b2ed24016d1860e21c7fd9d374c387f82d https://github.com/qt/qtbase/commit/40d4c1b2ed24016d1860e21c7fd9d374c387f82d